--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,12 @@
-kfind (4:17.08.1-1~) UNRELEASED; urgency=medium
+kfind (4:17.08.1-1~1) UNRELEASED; urgency=medium
 
   * New upstream release (17.08.1)
   * Bump Standards-Version to 4.1.0.
   * Update upstream metadata
   * Update build-deps and deps with the info from cmake
+  * Update uploaders list as requested by MIA team
 
- -- Maximiliano Curia <maxy@debian.org>  Fri, 08 Sep 2017 15:34:00 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Tue, 31 Oct 2017 18:00:38 +0100
 
 kfind (4:17.08.1-0neon) xenial; urgency=medium
 
