--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ kfind (4:17.08.3-0r1) UNRELEASED; urgency=medium
   * New upstream release.
   * Simplify watch file, and switch it to https.
   * Bump Standards-Version to 4.1.1, no changes required.
+  * Use https in copyright.
 
  -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 31 Oct 2017 18:00:38 +0100
 
