--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,6 @@
-kfind (4:17.08.3-0r1) UNRELEASED; urgency=medium
+kfind (4:17.08.3-1) experimental; urgency=medium
+
+  * Team upload.
 
   [ Maximiliano Curia ]
   * New upstream release (17.08.1)
@@ -14,7 +16,7 @@ kfind (4:17.08.3-0r1) UNRELEASED; urgency=medium
   * Update copyright.
   * Remove trailing whitespaces in changelog.
 
- -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 31 Oct 2017 18:00:38 +0100
+ -- Pino Toscano <pino@debian.org>  Sun, 17 Dec 2017 21:28:34 +0100
 
 kfind (4:17.08.1-0neon) xenial; urgency=medium
 
