--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+kfind (4:17.08.3-2) UNRELEASED; urgency=medium
+
+
+ -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 28 Dec 2017 22:53:02 +0100
+
 kfind (4:17.08.3-1) experimental; urgency=medium
 
   * Team upload.
